--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://ttgttg.github.io/react-gh-pages",
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
