--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movies",
   "version": "0.1.0",
-  "homepage": "https://ttgttg.github.io/react-gh-pages",
+  "homepage": "https://ttgttg.github.io/main",
   "private": true,
   "dependencies": {
     "@react-spring/web": "^9.7.4",
